# Event-planner-api

./: .dockerignore  .env.prod  .gitignore  Dockerfile  README.md  docker-compose.yaml  pyproject.toml  requirements.txt
planner/: .env  main.py  planner.db
planner/auth/: authenticate.py  hash_password.py  jwt_handler.py
planner/database/: WiredTiger.turtle  WiredTiger.wt  _mdb_catalog.wt  collection-0-8414522496555852011.wt  collection-2-8414522496555852011.wt  connection.py  index-1-8414522496555852011.wt  index-3-8414522496555852011.wt  sizeStorer.wt
planner/database/diagnostic.data/: metrics.2025-08-28T16-59-32Z-00000  metrics.2025-08-30T01-53-19Z-00000
planner/models/: events.py  users.py
planner/routes/: events.py  users.py
planner/store/: WiredTiger.turtle  WiredTiger.wt  _mdb_catalog.wt  collection-0-17992237942388829860.wt  collection-0-8200344683221987617.wt  collection-2-17992237942388829860.wt  collection-2-8200344683221987617.wt  collection-4-8200344683221987617.wt  index-1-17992237942388829860.wt  index-1-8200344683221987617.wt  index-3-17992237942388829860.wt  index-3-8200344683221987617.wt  index-5-8200344683221987617.wt  index-6-8200344683221987617.wt  sizeStorer.wt
planner/store/diagnostic.data/: metrics.2025-08-28T16-40-14Z-00000  metrics.2025-08-30T01-51-18Z-00000
